--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="bar"></span>
         
         <ul>
-            <li><img src="back2.webp"/></li>
+            <li><img src="medea/images/logo.webp"/></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
             <li><a href="AboutUs.html">About Us</a></li>
