--- a/Qiddiya.html
+++ b/Qiddiya.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Red Sea</title>
-    <link rel="stylesheet" href="mysheet.css">
+    <title>Qiddiya</title>
+    <link rel="stylesheet" href="css/mysheet.css">
 </head>
-<body style="background-image: url('medea/images/redseaback.jpg');">
+<body style="background-image: url('medea/images/qiddiya\ back.webp');">
     <nav class="navbar">
        
             <span class="bar"></span>
@@ -20,7 +20,7 @@
             <li><a href="AboutUs.html">About Us</a></li>
         </ul>
     </nav>
-    <img src="medea/images/red sea back.webp" alt="Description" >
+    <img src="medea/images/Qiddiya6.jpg" alt="Description" >
     
 </body>
 </html>
