--- a/Roshn.html
+++ b/Roshn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roshn</title>
-    <link rel="stylesheet" href="mysheet.css">
+    <link rel="stylesheet" href="css/mysheet.css">
 </head>
 <body style="background-image: url('medea/images/Roshnback.jpg');">
     <nav class="navbar">
