--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 
     <p>Roshn</p>
        </a>   </div>
+
+       <div class ="footer">
+        <p>Made by</p>
+        <p> Khaled Wafa, Mazen Al-Than</p>
     
 </body>
 </html>
