--- a/Roshn.html
+++ b/Roshn.html
@@ -21,6 +21,11 @@
         </ul>
     </nav>
     <img src="medea/images/Roshn.jpeg" alt="Description" >
+    <div class ="footer">
+        <p>Made by</p>
+        <p> Khaled Wafa, Mazen Al-Than</p>
+    <button style="float: right;"><a href="index.html">Home</a></button>
+    <button style="float: left;"><a href="redsea.html">prevus</a></button></div>
     
 </body>
 </html>
