--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
        <div class ="footer">
         <p>Made by</p>
-        <p> Khaled Wafa, Mazen Al-Than</p>
+        <p> Khaled Wafa, Mazen Al-Than</p></div>
     
 </body>
 </html>
