--- a/NEOM.html
+++ b/NEOM.html
@@ -21,5 +21,10 @@
         </ul>
     </nav> 
       <img src="medea/images/NEOM.webp" />   
+      <div class ="footer">
+        <p>Made by</p>
+        <p> Khaled Wafa, Mazen Al-Than</p>
+    <button style="float: right;"><a href="Qiddiya.html">next</a></button>
+    <button style="float: left;"><a href="Diriyah.html">prevus</a></button></div>
 </body>
 </html>
