--- a/NEOM.html
+++ b/NEOM.html
@@ -6,7 +6,7 @@
     <title>NEOM</title>
     <link rel="stylesheet" href="css/mysheet.css">
 </head>
-<body style="background-image: url('medea/images/neomback.jpg');">
+<body style="background-image: url('media/images/neomback.jpg');">
     <nav class="navbar">
        
             <span class="bar"></span>
@@ -14,12 +14,12 @@
             <span class="bar"></span>
         
         <ul>
-            <li><img src="medea/images/logo.webp"/></li>
+            <li><img src="media/images/logo.webp"/></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
             <li><a href="AboutUs.html">About Us</a></li>
         </ul>
     </nav> 
-      <img src="medea/images/NEOM.webp" />   
+    <img src="media/images/NEOM.webp" />   
 </body>
 </html>
