--- a/NEOM.html
+++ b/NEOM.html
@@ -20,7 +20,7 @@
             <li><a href="AboutUs.html">About Us</a></li>
         </ul>
     </nav> 
-      <img src="medea/images/NEOM.webp" />   
+      <img src="media/images/NEOM.webp" />   
       <div class ="footer">
         <p>Made by</p>
         <p> Khaled Wafa, Mazen Al-Than</p>
