--- a/Diriyah.html
+++ b/Diriyah.html
@@ -20,7 +20,7 @@
             <li><a href="AboutUs.html">About Us</a></li>
         </ul>
     </nav>
-    <img src="medea/images/Diriyah.jpg" alt="Description" >
+    <img src="media/images/Diriyah.jpg" alt="Description" >
     <div class ="footer">
         <p>Made by</p>
         <p> Khaled Wafa, Mazen Al-Than</p>
