--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
         </ul>
     </nav>
    
-    <div class ="first"><a href="Diriyah.html">
+    <div class ="first"><a href="vision.html">
      <img src="media/images/Diriyah.jpg" alt="Description">
         <p>Diriyah </p></a>
     
 </div>
 
    <br>
-    <div class="second"><a href="NEOM.html">
+    <div class="second"><a href="vision.html">
     <img src="media/images/NEOM.webp" />
 
     <p>NEOM </p>
        </a></div>
    <br>
 
-    <div class ="three"><a href="Qiddiya.html">
+    <div class ="three"><a href="vision.html">
     <img src="media/images/Qiddiya6.jpg" alt="Description">
         <p>Qiddiya</p>
     </a>
 </div>
 
    <br>
-    <div class="four"><a href="redsea.html">
+    <div class="four"><a href="vision.html">
     <img src="media/images/red sea back.webp" />
 
     <p>The Red Sea</p>
        </a>   </div>
 <br>
-    <div class="five"><a href="Roshn.html">
+    <div class="five"><a href="vision.html">
     <img src="media/images/Roshn.jpeg" />
 
     <p>Roshn</p>
