--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <span class="bar"></span>
         
         <ul>
-            <li><img src="media/images/logo.webp"/></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="ContactUs.html">Contact Us</a></li>
-            <li><a href="AboutUs.html">About Us</a></li>
+            <li><a href="index.html"><img src="media/images/logo.webp"/></a></li>
+            <li><a href="vision.html"> 2030</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about_us.html">About Us</a></li>
         </ul>
     </nav>
    
