تعديل اما قبل الكامل

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 
         <ul>
          <div  class ="mood-toggle">  
-<input type="radio" name="gender" value="dark" checked>Dark
-    <input type="radio" name="gender" value="light" checked>Light
+<input type="radio" name="gender" value="dark" is="darkmode" >Dark
+    <input type="radio" name="gender" value="light" id="lightmode" checked>Light
          </div>
 
             <li><a href="index.html"><img src="media/images/logo.webp"/></a></li>
@@ -23,7 +23,14 @@
             <li><a href="about_us.html">About Us</a></li>
         </ul>
     </nav>
-   
+
+
+   </nav> <section class="hero-section">
+ 
+</section>
+
+
+<main> <h2>اكتشف مشاريعنا</h2>
   <main>
     
     <h2>اكتشف مشاريع</h2>
