--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 
         <ul>
          <div  class ="mood-toggle">  
-<input type="radio" name="gender" value="dark" is="darkmode" >Dark
+<input type="radio" name="gender" value="dark" id="darkmode" >Dark
     <input type="radio" name="gender" value="light" id="lightmode" checked>Light
          </div>
 
@@ -49,8 +49,8 @@
 </main>
 
        <div class ="footer">
-        <p>Made by</p>
-        <p> Khaled Wafa, Mazen Al-Than</p></div>
+        <p1>Made by</p1>
+        <p1> Khaled Wafa, Mazen Al-Than</p1></div>
      
 
     <script src="js/main.js">
