حذفت اكواد يلي مالها داعي

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </main>
 
        <div class ="footer">
-        <p1>Made by</p1>
-        <p1> Khaled Wafa, Mazen Al-Than</p1></div>
+        <p>Made by</p>
+        <p> Khaled Wafa, Mazen Al-Than</p></div>
      
 
     <script src="js/main.js">
