تغيرات بسيطة لوجو

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="radio" name="gender" value="light" id="lightmode" checked>Light
          </div>
 
-            <li><a href="index.html"><img src="media/images/logo.webp"/></a></li>
+            <li><a href="index.html"><img src="media/images/logo2.png"/></a></li>
             <li><a href="index.html"> projects</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about_us.html">About Us</a></li>
@@ -50,7 +50,8 @@
 
        <div class ="footer">
         <p>Made by</p>
-        <p> Khaled Wafa, Mazen Al-Than</p></div>
+        <p> Khaled Wafa, Mazen Al-Than</p>
+    </div>
      
 
     <script src="js/main.js">
