ضفت كلام في مشاريع

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <main> 
  
     
-    <h2>اكتشف مشاريع</h2>
+    <h2>اكتشف مشاريع المملكة الكبرى</h2>
 
     <div class="project-buttons">
         <button onclick="showProject('diriyah')">الدرعية</button>
