--- a/progects.html
+++ b/progects.html
@@ -18,7 +18,6 @@
     <input type="radio" name="gender" value="light" id="lightmode" checked>Light
          </div>
 
-            
             <li><a href="index.html"><img src="media/images/logo2.png"/></a></li>
             <li><a href="progects.html"> projects</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -33,7 +32,23 @@
    </div>
 
 
+<main> 
+ 
+    
+    <h2>اكتشف مشاريع المملكة الكبرى</h2>
 
+    <div class="project-buttons">
+        <button onclick="showProject('diriyah')">الدرعية</button>
+        <button onclick="showProject('neom')">نيوم</button>
+        <button onclick="showProject('qiddiya')">القدية</button>
+        <button onclick="showProject('redsea')">البحر الأحمر</button>
+        <button onclick="showProject('roshn')">روشن</button>
+    </div>
+
+    <div id="project-content-container">
+        <p>الرجاء اختيار مشروع من الأعلى لعرض تفاصيله</p>
+    </div>
+</main>
 
        <div class ="footer">
         <p>Made by</p>
