ضفت الزر في الصفخة الرئيسية , ضفت الثيم الى باقي الصفحات (about us, contact us)

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
    
    <div class="banner">
- 
+   <div class="cta-container">
+          <a href="progects.html" class="cta-button">اكتشف مشاريعنا</a>
+       </div>
    </div>
-
 
 
 
