--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 
         <ul>
          <div  class ="mood-toggle">  
-<input type="radio" name="gender" value="dark" id="darkmode" >Dark
-    <input type="radio" name="gender" value="light" id="lightmode" checked>Light
+<input type="radio" name="gender" value="dark" id="darkmode" >🌚
+    <input type="radio" name="gender" value="light" id="lightmode" checked>🌞
          </div>
 
             
