--- a/progects.html
+++ b/progects.html
@@ -13,9 +13,9 @@
     
                 
         <ul>
-         <div  class ="mood-toggle">  
-<input type="radio" name="gender" value="dark" id="darkmode" >Dark
-    <input type="radio" name="gender" value="light" id="lightmode" checked>Light
+        <div  class ="mood-toggle">  
+<input type="radio" name="gender" value="dark" id="darkmode" >🌚
+    <input type="radio" name="gender" value="light" id="lightmode" checked>🌞
          </div>
 
             <li><a href="index.html"><img src="media/images/logo2.png"/></a></li>
