--- a/about_us.html
+++ b/about_us.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
 <div class="about">
-    <img src="Media/images/OIP.jpeg"/>
+    <img src="images/OIP.jpeg"/>
     <ul>
         <h2>Khaled Wafa</h2>
 <li>I am a Software Engenier student at <a href="https://yu.edu.sa/"target="_blank">YU</a>.</li>
@@ -36,7 +36,7 @@
 </div>
 
 <div class="about" style="background-color: rgba(11, 195, 11, 0.735);">
-   <img src="Media/images/mazen.jpg"/>
+   <img src="images/mazen.jpg"/>
     <ul>
         <h2>Mazen Al-Than</h2>
         <li><a href="https://yu.edu.sa/">Alyamama university</a>: Software Major</a>.</li>  
