--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          </div>
 
             
-            <li><a href="index.html"><img src="media/images/logo2.png"/></a></li>
+            <li><a href="index.html"><img src="images/logo2.png"/></a></li>
             <li><a href="progects.html"> projects</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about_us.html">About Us</a></li>
