--- a/about_us.html
+++ b/about_us.html
@@ -29,7 +29,7 @@
     <img src="images/OIP.jpeg"/>
     <ul>
         <h2>Khaled Wafa</h2>
-<li>I am a Software Engenier student at <a href="https://yu.edu.sa/"target="_blank">YU</a>.</li>
+<li>I am a Software Engenier student at <a href="https://yu.edu.sa/" target="_blank">YU</a>.</li>
 <li>I love programming.</li>
 <li>I enjoy learning new programming languages.</li>
 </ul>
@@ -39,7 +39,7 @@
    <img src="images/mazen.jpg"/>
     <ul>
         <h2>Mazen Al-Than</h2>
-        <li><a href="https://yu.edu.sa/">Alyamama university</a>: Software Major</a>.</li>  
+                <li><a href="https://yu.edu.sa/">Alyamama university</a>: Software Major.</li>  
         <li>I love programming.</li>
 <li>I enjoy learning new programming languages.</li>
 </ul>
