--- a/about_us.html
+++ b/about_us.html
@@ -44,6 +44,15 @@
 <li>I enjoy learning new programming languages.</li>
 </ul>
 </div>
+<div class="about">
+    <img src="images/person.svg"/>
+    <ul>
+        <h2>FAIZ ALHAJ</h2>
+<li>I am a network Engenier student at <a href="https://yu.edu.sa/" target="_blank">YU</a>.</li>
+<li>I love programming and games.</li>
+<li>I enjoy learning new programming languages.</li>
+</ul>
+</div>
 
 
    
@@ -52,7 +61,7 @@
 
        <div class ="footer">
         <p>Made by</p>
-        <p> Khaled Wafa, Mazen Al-Than</p>
+        <p> Khaled Wafa, Mazen Al-Than ,FAIZ ALHAJ</p>
     </div>
      
 
