--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,12 @@
         <p>Email:202311286@yu.edy.sa</p>
         
     </div>
+      <div class="contact">
+        <h2>FAIZ ALHAJ</h2>
+         <p>Phone Number: +962788888888</p>
+        <p>Email:202111121@yu.edy.sa</p>
+        
+    </div>
 
    
 </div>
