--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
        <div class ="footer">
         <p>Made by</p>
-        <p> Khaled Wafa, Mazen Al-Than</p>
+        <p> Khaled Wafa, Mazen Al-Than, FAIZ ALHAJ </p>
     </div>
      
 
